--- a/styles/markdown.css
+++ b/styles/markdown.css
@@ -4,7 +4,11 @@ blockquote {
   padding-left: 20px;
   border-left: 5px solid peru;
 }
-
+blockquote::first-letter {
+  color: peru;
+  font-weight: bold;
+  font-size: 130%;
+}
 a {
   text-decoration: none;
   color: darkgoldenrod;
