--- a/styles/root.css
+++ b/styles/root.css
@@ -36,6 +36,21 @@ nav {
   font-weight: 600;
   font-style: normal;
 }
+search {
+  height: 2rem;
+  width: 100%;
+  display: flex;
+
+  position: absolute;
+  bottom: -2.5rem;
+
+}
+search > input {
+  flex-grow: 5;
+}
+search > button {
+  flex-grow: 1;
+}
 #left-arrow-control,
 #right-arrow-control {
   background-color: #eee;
