--- a/styles/root.css
+++ b/styles/root.css
@@ -13,6 +13,7 @@ main#root {
   width: 900px;
   margin: 4rem auto;
   position: relative;
+  min-height: 100vh;
 }
 main#root.fullwidth {
   width: 100%;
@@ -47,6 +48,7 @@ search {
 }
 search > input {
   flex-grow: 5;
+  z-index: 1;
 }
 search > button {
   flex-grow: 1;
@@ -89,7 +91,7 @@ search > button {
   background-color: #f1f1f1;
   min-width: 160px;
   box-shadow: 0px .5rem 1rem 0px rgba(0,0,0,0.2);
-  z-index: 1;
+  z-index: 5;
   overflow-y: scroll;
   transition: height 1s ease-in;
   max-height: 250px;
