--- a/styles/markdown.css
+++ b/styles/markdown.css
@@ -3,6 +3,7 @@ blockquote {
   margin-left: 20px;
   padding-left: 20px;
   border-left: 5px solid peru;
+  font-style: italic;
 }
 blockquote::first-letter {
   color: peru;
@@ -30,4 +31,13 @@ table {
 td u {
   display: block;
   text-align: center;
+}
+li {
+  padding: .25rem .75rem;
+}
+table.big li:not(:only-child):nth-of-type(even) {
+  background-color: #eee;
+}
+table.big li:not(:only-child):nth-of-type(odd) {
+  background-color: #fff;
 }
