--- a/styles/root.css
+++ b/styles/root.css
@@ -37,14 +37,19 @@ nav {
   font-weight: 600;
   font-style: normal;
 }
+nav span {
+  cursor: pointer;
+}
 search {
   height: 2rem;
-  width: 100%;
+  
   display: flex;
 
   position: absolute;
   bottom: -2.5rem;
+  left: 50%;
 
+  transform: translate(-50%);
 }
 search > input {
   flex-grow: 5;
@@ -150,4 +155,63 @@ search > button {
 
 #content > p:first-child:has(img) ~ p {
   margin-top: 1rem;
+}
+
+
+
+
+@media (max-width: 600px) {
+
+  .dropdown:first-of-type {
+    margin-left: 0;
+  }
+  .dropdown:last-of-type {
+    margin-right: 0;
+  }
+
+  body {
+    width: 100%;
+    background-color: #303030;
+  }
+
+  main#root {
+    width: 100%; 
+    margin: 0; 
+  }
+
+  nav {
+    width: 100%; 
+    position: static; 
+    margin: 0;
+    padding: 8px 1rem; 
+    box-sizing: border-box;
+    flex-flow: column;
+  }
+
+  #left-arrow-control,
+  #right-arrow-control {
+    display: none; 
+  }
+
+  search {
+    margin-top: 1rem; 
+  }
+
+  search > input, 
+  search > button {
+    flex-grow: 1; 
+  }
+
+  #content {
+    margin-top: 1rem;
+  }
+
+  #content img {
+    max-width: 100%; 
+    margin-top: 0.5rem;
+  }
+
+  .dropdown-content {
+    max-height: 150px; 
+  }
 }
